# neconome-notify

./: LICENSE  README.md  config.ini.example  neconome-notify.py  pyproject.toml  requirements.txt  test_util.py  util.py
src/: config.py  neconome-notify.py  test_util.py  util.py
